--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -100,6 +100,13 @@ config TARGET_IMX8MN_EVK
 	select SUPPORT_SPL
 	select IMX8M_LPDDR4
 
+config TARGET_SHARKET
+	bool "sharket"
+	select IMX8MN
+	select SUPPORT_SPL
+	select IMX8M_LPDDR4
+
+
 config TARGET_IMX8MN_DDR4_EVK
 	bool "imx8mn DDR4 EVK board"
 	select IMX8MN
