--- a/configs/sharket_defconfig
+++ b/configs/sharket_defconfig
@@ -14,7 +14,7 @@ CONFIG_ENV_SIZE=0x1000
 CONFIG_ENV_OFFSET=0x400000
 CONFIG_ENV_SECT_SIZE=0x10000
 CONFIG_DM_GPIO=y
-CONFIG_TARGET_IMX8MN_DDR4_EVK=y
+CONFIG_TARGET_SHARKET=y
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
@@ -32,7 +32,7 @@ CONFIG_DEFAULT_FDT_FILE="sharket.dtb"
 CONFIG_BOARD_LATE_INIT=y
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_SPL_BOARD_INIT=y
-CONFIG_SPL_BOOTROM_SUPPORT=y
+CONFIG_SPL_BOOTROM_SUPPORT=n
 CONFIG_SPL_SEPARATE_BSS=y
 CONFIG_SPL_I2C_SUPPORT=y
 CONFIG_SPL_POWER_SUPPORT=y
@@ -62,7 +62,7 @@ CONFIG_CMD_FAT=y
 CONFIG_CMD_SF=y
 CONFIG_OF_CONTROL=y
 CONFIG_DEFAULT_DEVICE_TREE="sharket"
-CONFIG_ENV_IS_IN_MMC=y
+CONFIG_ENV_IS_IN_MMC=n
 CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_ENV_IS_NOWHERE=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
@@ -129,6 +129,11 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_GADGET_MANUFACTURER="FSL"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
 CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
+
+CONFIG_SPL_USB_HOST_SUPPORT=y
+CONFIG_SPL_USB_GADGET=y
+CONFIG_SPL_USB_SDP_SUPPORT=y
+CONFIG_SDP_LOADADDR=0x40400000
 
 CONFIG_OF_LIBFDT_OVERLAY=y
 
