OTG USB0 bugfix

--- a/arch/arm/dts/sharket.dts
+++ b/arch/arm/dts/sharket.dts
@@ -17,6 +17,13 @@
 		stdout-path = &uart2;
 	};
 
+	usbg1: usbg1 {
+		compatible = "fsl,imx27-usb-gadget";
+		dr_mode = "peripheral";
+		chipidea,usb = <&usbotg1>;
+		status = "okay";
+	};
+
 	reg_usdhc2_vmmc: regulator-usdhc2 {
 		compatible = "regulator-fixed";
 		pinctrl-names = "default";
@@ -449,5 +456,9 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_wdog>;
 	fsl,ext-reset-output;
+	status = "okay";
+};
+
+&usbotg1 {
 	status = "okay";
 };
